SERVER-42374 TimestampMonitor should stop its PeriodicJob prior to destructing itself